crux-mir/test/symb_eval/crux/fail_return.good
test fail_return/<DISAMB>::fail1[0]: returned Symbolic BV, [Crux] Attempting to prove verification conditions.
FAILED
test fail_return/<DISAMB>::fail2[0]: returned 123, [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- fail_return/<DISAMB>::fail1[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/crux/fail_return.rs:8:22: 8:27: error: in fail_return/<DISAMB>::fail1[0]
[Crux]   attempt to compute `copy _0 + const 1_u8`, which would overflow
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:45:9: 45:79 !test/symb_eval/crux/fail_return.rs:8:5: 8:32: error: in fail_return/<DISAMB>::fail1[0]
[Crux]   MIR assertion at test/symb_eval/crux/fail_return.rs:8:5:
[Crux]   	x + 1 > x

---- fail_return/<DISAMB>::fail2[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/crux/fail_return.rs:15:22: 15:27: error: in fail_return/<DISAMB>::fail2[0]
[Crux]   attempt to compute `copy _1 + const 1_u8`, which would overflow
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:45:9: 45:79 !test/symb_eval/crux/fail_return.rs:15:5: 15:32: error: in fail_return/<DISAMB>::fail2[0]
[Crux]   MIR assertion at test/symb_eval/crux/fail_return.rs:15:5:
[Crux]   	x + 1 > x

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 4
[Crux]   Proved: 0
[Crux]   Disproved: 4
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
